# CSC_211H_Project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  chatwidget.cpp  chatwidget.h  databasemanager.cpp  databasemanager.h  exceptions.h  exercisewidget.cpp  exercisewidget.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  moodinfodialog.cpp  moodinfodialog.h  moodtracker.cpp  moodtracker.h  progresswidget.cpp  progresswidget.h  resources.qrc  schedulewidget.cpp  schedulewidget.h  taskwidget.cpp  taskwidget.h
